fix: remove horizontal scroll on main page

--- a/src/app/ui/App/App.module.css
+++ b/src/app/ui/App/App.module.css
@@ -7,6 +7,5 @@
 .layout {
   max-width: 1200px;
   margin: 0 auto;
-  padding: 0 20px;
-  flex: 1; /* Главное - это свойство заставляет контент растягиваться */
+  flex: 1;
 }
