--- a/src/app/ui/MainPage/MainPage.module.css
+++ b/src/app/ui/MainPage/MainPage.module.css
@@ -4,7 +4,7 @@
 
 .sections {
     padding: 40px 0;
-    max-width: 1300px;
+    max-width: 1200px;
     margin: 0 auto;
 }
 
